--- a/README
+++ b/README
@@ -14,9 +14,11 @@ I. Description:
   long as it is derived from Lua 5.1 or later.
     The extensions this project intends to provide for now are:
       <> Some all-purpose functionalities that are commonly needed.
-      <> An Object Oriented system, adaptable to eventual native libraries.
-      <> An Unit Test library.
-      <> A Mock library.
+      <> A simple Object Oriented system.
+      <> A Functional utility module.
+      <> An Unit Test module.
+      <> A Mock module.
+      <> A Macro feature module.
     New extensions may appear on the future, as I learn more and think up new
   ideas ;).
 
