Updated README to new project name.

--- a/README
+++ b/README
@@ -1,17 +1,17 @@
 
 ================================================================================
-:::: LuaNova Project by Kazuo256 :::::::::::::::::::::::::::::::::::::::::::::::
+:::: Lua Utility eXtension Project by Kazuo256 :::::::::::::::::::::::::::::::::::::::::::::::
 ================================================================================
 
 This document is still a stub.
 
 I. Description:
 
-    LuaNova is a project whose objective is to make some extension facilities to
-  the programming language Lua. It is written in Lua 5.1+, which means you may
-  use it in your own project without having to worry (much) about which Lua
-  distribution you are using - it may very well be your own distribution - as
-  long as it is derived from Lua 5.1 or later.
+    Lua Utility eXtension (LUX) is a project whose objective is to make some
+  extension facilities to the programming language Lua. It is written in Lua
+  5.1.X, which means you may use it in your own project without having to worry
+  (much) about which Lua distribution you are using - it may very well be your
+  own distribution - as long as it is derived from Lua 5.1 or later.
     The extensions this project intends to provide for now are:
       <> Some all-purpose functionalities that are commonly needed.
       <> A simple Object Oriented system.
@@ -24,6 +24,9 @@ I. Description:
 
 II. Usage notes:
 
-    1)  The Lua module itself is named only "nova" to avoid redundancy and
-        verbosity XD.
+    1)  The Lua module itself is named as "lux", so import it with
+
+          require "lux.object"
+
+        for instance.
 
